# han-cihui

./: .gitignore  1to1_fan-jian.txt  1to1_jian-fan.txt  Cargo.toml  LICENSE  README.md  build.rs  dictionary.txt  dictionary_words.txt  tagging_ui.slint
migrations_sql/: V1__initial.sql  V1__words.sql  V2__words_date.sql  V3__word_lists.sql  V4__books.sql  V5__sync_stats.sql
src/: analysis.rs  anki_access.rs  cleanup.rs  cli.rs  cli_args.rs  cli_commands.rs  config.rs  dictionary.rs  ebook.rs  errors.rs  extraction.rs  fan2jian.rs  lib.rs  main.rs  persistence.rs  pkuseg_segment_book.py  python_interop.rs  segmentation.rs  state.rs  tagging.rs  tui.rs  vocabulary.rs  word_lists.rs
src/db/: anki.rs  books.rs  mod.rs  vocab.rs  word_lists.rs
src/tagger/: main.rs
src/tui/: draw.rs  events.rs  mod.rs  state.rs  util.rs
src/tui/draw/: analysis.rs  books.rs  info.rs  util.rs  word_list.rs
src/tui/events/: analysis.rs  books.rs  info.rs  word_list.rs
src/tui/state/: analysis.rs  books.rs  info.rs  word_list.rs
test_resources/: book.json  test_pkuseg.py  wangxiaobo-essays.epub  xusanguan.epub
