[package]
name = "han-cihui"
version = "0.1.0"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"

[dependencies]
rusqlite = "0.23.1"
serde_json = "1.0.53"
clap = "2.33.1"
jieba-rs = "0.5"
epub = "1.2.2"
scraper = "0.12.0"
regex = "1.3.9"
lazy_static = "1.4.0"
unicode-segmentation = "1.6.0"
prettytable-rs = "0.8"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
