[package]
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2021"
name = "han-cihui"
version = "0.1.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.1"
crossterm = {version = "0.22", features = ["serde"]}
epubparse = "0.2.2"
lazy_static = "1.4.0"
refinery = {version = "0.8.2", features = ["rusqlite"]}
regex = "1.3.9"
rusqlite = "0.26.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.53"
slint = "0.2.0"
tempfile = "3.1.0"
tui = {version = "0.16.0", default-features = false, features = ['crossterm', 'serde']}
unicode-segmentation = "1.6.0"
unicode-width = "0.1.8"

[build-dependencies]
slint-build = "0.2.0"